# badminton-shop-tracker

./: .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
archive/frontend-html/: index.html  service-worker.js
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  database.py  email_utils.py  main.py  models.py  phone_utils.py  schemas.py  seed.py  sms.py
backend/tests/: conftest.py  test_orders.py
frontend/: Dockerfile  app.js  index.html  package-lock.json  package.json  style.css  vite.config.js
frontend-html/: app.js
frontend/src/: App.jsx  api.js  main.jsx  theme.css
frontend/src/components/: CustomerSearch.jsx  EditItemsPanel.jsx  History.jsx  LineItemRow.jsx  Login.jsx  NewOrderForm.jsx  OrderCard.jsx  Summary.jsx
frontend/src/utils/: dates.js
