[project]
name = "badminton-shop-tracker"
version = "0.1.0"
description = "Standalone service-order tracker with SMS notifications"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "twilio>=9.3.7",
    "psycopg2-binary>=2.9.9",
    "itsdangerous>=2.2.0",
    "bcrypt>=4.1.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]